--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -2,40 +2,33 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-    name = "Syllabus"
-    url = "/syllabus/"
-    weight = 1
-[[main]]
     name = "Schedule"
     url = "/schedule/"
-    weight = 2
+    weight = 1
 [[main]]
-    name = "Weekly Lessons"
-    url = "/lessons/"
-    weight = 3
+    name = "Syllabus"
+    url = "/syllabus/"
+    weight = 2
 [[main]]
     name = "Project"
     url = "/Project/"
-    weight = 4
+    weight = 3
 [[main]]
     name = "Help"
     url = "/help/"
-    weight = 5
+    weight = 4
 [[main]]
-    name = "RStudio"
+    name = " "
     url = "http://www.rstudio.com"
     pre = "<i class=\"fas fa-search fa-lg\"></i>"
+    weight = 5
+[[main]]
+    url = "https://github.com/tidymodels/"
+    pre = "<i class=\"fab fa-github fa-lg\"></i>"
     weight = 6
 [[main]]
-    name = "GitHub"
-    pre = "<i class=\"fab fa-github fa-lg\"></i>"
     url = "https://github.com/tidymodels/"
+    pre = "<i class=\"fas fa-search fa-lg\"></i>"
     weight = 7
-
-[[main]]
-    name = "Sakai"
-    pre = "<i class=\"fab fa-github fa-lg\"></i>"
-    url = "https://github.com/tidymodels/"
-    weight = 8
 
 
