--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,32 +3,46 @@
 
 [[main]]
     name = "Schedule"
+    pre = "<i class=\"fa fa-calendar\" aria-hidden=\"true\"></i>"
     url = "/schedule/"
     weight = 1
+
 [[main]]
+    pre = "<i class=\"fa fa-info-circle\"></i>"
     name = "Syllabus"
     url = "/syllabus/"
     weight = 2
+
 [[main]]
-    name = "Project"
-    url = "/Project/"
-    weight = 3
-[[main]]
+    pre = "<i class=\"fa fa-question-circle\" aria-hidden=\"true\"></i>"
     name = "Help"
     url = "/help/"
     weight = 4
+    
 [[main]]
-    name = " "
-    url = "http://www.rstudio.com"
-    pre = "<i class=\"fas fa-search fa-lg\"></i>"
+    url = "https://vm-manage.oit.duke.edu/containers"
+    pre = "<i class=\"fa fa-code\" aria-hidden\"true\"></i>"
+    name = "RStudio"
     weight = 5
+    
 [[main]]
-    url = "https://github.com/tidymodels/"
-    pre = "<i class=\"fab fa-github fa-lg\"></i>"
+    url = "www.github.com/sta210-fa20"
+    pre = "<i class='fab fa-github fa-lg'></i>"
+    name  = "GitHub"
     weight = 6
+
+    
 [[main]]
-    url = "https://github.com/tidymodels/"
-    pre = "<i class=\"fas fa-search fa-lg\"></i>"
-    weight = 7
+    pre = "<i class=\"fa fa-check-square\" aria-hidden=\"true\"></i>"
+    url = "https://www.gradescope.com"
+    name = "Gradescope"
+    weight = 7  
+    
+
+[[main]]
+    pre = "<i class=\"fa fa-graduation-cap\" aria-hidden=\"true\"></i>"
+    url = "https://sakai.duke.edu"
+    name = " Sakai"
+    weight = 8
 
 
