updates updates updates

--- a/data/homepage4.yaml
+++ b/data/homepage4.yaml
@@ -1,7 +1,7 @@
 bandtwo:
-- url: /help/
-  title: Sticky 4
-  icon: fa-lightbulb
+- url: https://sakai.duke.edu
+  title: Join on Zoom!
+  icon: fa-laptop
   icon_pack: far
   what: |
-    This is where you can get help! 
+    Join all live lectures, labs, and office hours using the Zoom links in [Sakai](https://sakai.duke.edu). 
