--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,46 +3,46 @@
 
 [[main]]
     name = "Schedule"
-    pre = "<i class=\"fa fa-calendar\" aria-hidden=\"true\"></i>"
+ #    pre = "<i class=\"fa fa-calendar\" aria-hidden=\"true\"></i>"
     url = "/schedule/"
     weight = 1
 
 [[main]]
-    pre = "<i class=\"fa fa-info-circle\"></i>"
+   # pre = "<i class=\"fa fa-info-circle\"></i>"
     name = "Syllabus"
     url = "/syllabus/"
     weight = 2
 
 [[main]]
-    pre = "<i class=\"fa fa-question-circle\" aria-hidden=\"true\"></i>"
+   # pre = "<i class=\"fa fa-question-circle\" aria-hidden=\"true\"></i>"
     name = "Help"
     url = "/help/"
-    weight = 4
-    
-[[main]]
-    url = "https://vm-manage.oit.duke.edu/containers"
-    pre = "<i class=\"fa fa-code\" aria-hidden\"true\"></i>"
-    name = "RStudio"
     weight = 5
     
 [[main]]
-    url = "www.github.com/sta210-fa20"
-    pre = "<i class='fab fa-github fa-lg'></i>"
-    name  = "GitHub"
-    weight = 6
+    url = "https://vm-manage.oit.duke.edu/containers"
+   # pre = "<i class=\"fa fa-code\" aria-hidden\"true\"></i>"
+    name = "<i class=\"fab fa-r-project\"></i>"
+    weight = 7
+    
+[[main]]
+    url = "https://www.github.com/sta210-fa20"
+    # pre = "<i class='fab fa-github fa-lg'></i>"
+    name  = "<i class='fab fa-github fa-lg'></i>"
+    weight = 8
 
     
 [[main]]
-    pre = "<i class=\"fa fa-check-square\" aria-hidden=\"true\"></i>"
+    # pre = "<i class=\"fa fa-check-square\" aria-hidden=\"true\"></i>"
     url = "https://www.gradescope.com"
     name = "Gradescope"
-    weight = 7  
+    weight = 4
     
 
 [[main]]
-    pre = "<i class=\"fa fa-graduation-cap\" aria-hidden=\"true\"></i>"
+    # pre = "<i class=\"fa fa-graduation-cap\" aria-hidden=\"true\"></i>"
     url = "https://sakai.duke.edu"
     name = " Sakai"
-    weight = 8
+    weight = 3
 
 
