--- a/data/homepage3.yaml
+++ b/data/homepage3.yaml
@@ -1,7 +1,9 @@
 bandtwo:
 - url: /help/
-  title: Sticky 3
-  icon: fa-lightbulb
-  icon_pack: far
+  title: Where to find help!
+  icon: fa-question-circle
+  icon_pack: fas
   what: |
-    This is where you can get help! 
+    **Office hours** are a time for you to meet with a member of the teaching team to ask questions about content, assignments, or anything else related to the course. Join using the Zoom link in [Sakai](https://sakai.duke.edu).
+  
+    Click on the [Help](/help/) tab for more information about other resources and ways to ask questions outside of office hours.
