formatting on front page.

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -67,7 +67,7 @@ MathJaxVersion = "2.7.1"
     menu_text_active = "#aa008e"
     menu_text_current = "#aa008e"
     menu_decorate_current = "none"
-    menu_title = "#ffffff" # Tidymodels
+    menu_title = "#ffffff" 
     menu_title_active = "#00000075" 
     menu_box_hover = "white" 
     menu_box_active = "#fcfcfc" 
