--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "STA 210"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.tidymodels.org/"
+baseurl = "https://sta210-fa20.netlify.app"
 
 # Name the theme folder in `themes/`.
 theme = "hugo-tourmaline"
