--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -28,9 +28,9 @@ MathJaxCDN = "//cdn.bootcss.com"
 MathJaxVersion = "2.7.1"
 
 [footer]
-    github_url = ""
+    github_url = "https://www.github.com/sta210-fa20"
     twitter_url = ""
-    support = "Website inspired by tidymodels and data viz site."
+    support = "This website was derived from [tidymodels.org](https://tidymodels.org) with inspiration from [datavizm20](https://datavizm20.classes.andrewheiss.com/) and [introds.org](https://introds.org/)."
 
 # leave blank in quotes for the default = true
 # to turn off, set = false (no quotes)
