--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -22,7 +22,7 @@
 [[main]]
     url = "https://vm-manage.oit.duke.edu/containers"
    # pre = "<i class=\"fa fa-code\" aria-hidden\"true\"></i>"
-    name = "<i class=\"fab fa-r-project\"></i>"
+    name = "<i class=\"fab fa-r-project fa-lg\"></i>"
     weight = 7
     
 [[main]]
@@ -30,6 +30,12 @@
     # pre = "<i class='fab fa-github fa-lg'></i>"
     name  = "<i class='fab fa-github fa-lg'></i>"
     weight = 8
+    
+[[main]]
+    url = "https://piazza.com/class/kdtk5we3l333ns"
+    # pre = "<i class='fab fa-github fa-lg'></i>"
+    name  = "<i class=\"ai ai-piazza ai-lg\"></i>"
+    weight = 9
 
     
 [[main]]
@@ -37,7 +43,7 @@
     url = "https://www.gradescope.com"
     name = "Gradescope"
     weight = 4
-    
+
 
 [[main]]
     # pre = "<i class=\"fa fa-graduation-cap\" aria-hidden=\"true\"></i>"
