--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -5,6 +5,7 @@ lessons:
   - week: "Week 01"
     date: "Mon, Aug 17"
     title: "Welcome to STA 210!"
+    slides: "01-welcome.html"
   - date: "Wed, Aug 19"
     title: "Data analysis + modeling"
   - date: "Thu, Aug 20"
