add lab to schedule

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -12,7 +12,8 @@ lessons:
   - title: "Motivating regression"
     slides: "02-motivate-regression.html"
   - date: "Thu, Aug 20"
-    title: "Lab 01"
+    title: "Lab 01: Practice with R"
+    lab: "01-practice-r.html"
 
   
   - date: "UNIT 01"
