start adding week 02 materials

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -22,11 +22,15 @@ lessons:
   - week: "Week 02"
     date: "Mon, Aug 24 "
     title: "Simple linear regression (SLR)"
+    slides: "03-slr-intro.html"
   - date: "Wed, Aug 26"
     title: "SLR: Inference"
+    slides: "04-slr-foundation.html"
+  - slides: "04-slr-coef-inf.html"
+  - title: "HW 01 assigned"
     hw: "hw-01.html"
   - date: "Thu, Aug 27" 
-    title: "Lab 02"
+    title: "Lab 02: SLR"
     
   - week: "Week 03"
     date: "Mon, Aug 31"
