week 02 slides update

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -24,9 +24,10 @@ lessons:
     title: "Simple linear regression (SLR)"
     slides: "03-slr-intro.html"
   - date: "Wed, Aug 26"
-    title: "SLR: Inference"
+    title: "SLR: Foundation"
     slides: "04-slr-foundation.html"
-  - slides: "04-slr-coef-inf.html"
+  - title: "SLR: Inference"
+    slides: "04-slr-coef-inf.html"
   - title: "HW 01 assigned"
     hw: "hw-01.html"
   - date: "Thu, Aug 27" 
