--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -36,9 +36,13 @@ lessons:
     
   - week: "Week 03"
     date: "Mon, Aug 31"
-    title: "SLR: Partitioning variability"
+    title: "SLR: Conditions"
+    slides: "05-slr-conditions.html"
+  - title: "SLR: Prediction"
+    slides: "05-slr-prediction.html"
   - date: "Wed, Sep 02"
-    title: "SLR: Prediction + conditions"
+    title: "SLR: Partitioning variability"
+    slides: "06-slr-partition-var.html"
     hw: "hw-02.html"
   - date: "Thu, Sep 03"
     title: "Lab 03"
