post sep 14 materials

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -43,6 +43,7 @@ lessons:
   - date: "Wed, Sep 02"
     title: "SLR: Partitioning variability"
     slides: "06-slr-partition-var.html"
+  - title: "HW 02 assigned"
     hw: "hw-02.html"
   - date: "Thu, Sep 03"
     title: "Lab 03: Airbnbs in Nashville, TN"
@@ -67,7 +68,8 @@ lessons:
     title: "MLR: Inference"
     slides: "09-mlr-inference.html"
   - date: "Wed, Sep 16"
-    title: "MLR: special predictors"
+    title: "MLR: Types of predictors"
+  - title: "HW 03 assigned"
     hw: "hw-03.html"
   - date: "Thu, Sep 18"
     title: "Lab 05"
