--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -78,10 +78,11 @@ lessons:
 
   - week: "Week 06"
     date: "Mon, Sep 21"
-    title: "MLR: Conditions"
-    title: "MLR: Transformations"
+    title: "Variable Transformations"
+    slides: "11-transformations.html"
   - date: "Wed, Sep 23"
-    title: "MLR: Comparing models"
+    
+    title: "Comparing models"
     hw: "hw-04.html"
   - date: "Thu, Sep 24"
     title: "Lab 06"
@@ -90,7 +91,8 @@ lessons:
     date: "Mon, Sep 28"
     title: "MLR: Model selection"
   - date: "Wed, Sep 30"
-    title: "MLR: Model diagnostics"  
+  - title: "MLR: Conditions"
+  - title: "MLR: Model diagnostics"  
   - date: "Thu, Oct 01"
     title: "Lab 07"
     quiz: "quiz-02.html"
