--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -81,8 +81,8 @@ lessons:
     title: "Variable Transformations"
     slides: "11-transformations.html"
   - date: "Wed, Sep 23"
-    
     title: "Comparing models"
+  - title: "HW 04 assigned" 
     hw: "hw-04.html"
   - date: "Thu, Sep 24"
     title: "Lab 06"
@@ -91,10 +91,13 @@ lessons:
     date: "Mon, Sep 28"
     title: "MLR: Model selection"
   - date: "Wed, Sep 30"
-  - title: "MLR: Conditions"
+    title: "MLR: Conditions"
   - title: "MLR: Model diagnostics"  
   - date: "Thu, Oct 01"
-    title: "Lab 07"
+    title: "No lab: Take Quiz 01"
+    quiz: "quiz-02.html"
+  - date: "Fri, Oct 02"
+    title: "Quiz 02 due"
     quiz: "quiz-02.html"
     
   - date: "UNIT 02"
