--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -81,7 +81,8 @@ lessons:
     title: "Variable Transformations"
     slides: "11-transformations.html"
   - date: "Wed, Sep 23"
-    title: "Comparing models"
+    title: "Model comparison"
+    slides: "12-model-comparison.html"
   - title: "HW 04 assigned" 
     hw: "hw-04.html"
   - date: "Thu, Sep 24"
