--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -92,11 +92,12 @@ lessons:
   - week: "Week 07"
     date: "Mon, Sep 28"
     title: "MLR: Model selection"
+    slides: "13-model-selection.html"
   - date: "Wed, Sep 30"
     title: "MLR: Conditions"
   - title: "MLR: Model diagnostics"  
   - date: "Thu, Oct 01"
-    title: "No lab: Take Quiz 01"
+    title: "No lab: Take Quiz 02"
     quiz: "quiz-02.html"
   - date: "Fri, Oct 02"
     title: "Quiz 02 due"
@@ -107,9 +108,9 @@ lessons:
     
   - week: "Week 08"
     date: "Mon, Oct 05"
-    title: "Statistics experience"
-  - date: "Wed, Oct 07"
     title: "Odds + odds ratio"
+  - date: "Wed, Oct 07"
+    title: "Logistic regression"
     hw: "hw-05.html"
   - date: "Thu, Oct 08"
     title: "Lab 08"
@@ -125,9 +126,9 @@ lessons:
 
   - week: "Week 10"
     date: "Mon, Oct 19"
-    title: "Logistic: predictions + conditions"
+    title: "Logistic regression"
   - date: "Wed, Oct 21"
-    title: "Logistic regression: inference"
+    title: "Logistic regression"
   - date: "Thu, Oct 22"
     title: "Lab 10"
     quiz: "quiz-03.html"
