add project to schedule

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -114,6 +114,9 @@ lessons:
     hw: "hw-05.html"
   - date: "Thu, Oct 08"
     title: "Lab 08"
+  - date: "Fri, Oct 09"
+    title: "Projet proposal due"
+    project: "#project-proposal"
 
   - week: "Week 09"
     date: "Mon, Oct 12"
@@ -138,8 +141,11 @@ lessons:
     title: "Multinomial logistic regression"
   - date: "Wed, Oct 28"
     title: "Multinomial logistic regression"
+  - title: "Draft report due"
+    project: "#written-report"
   - date: "Thu, Oct 29"
-    title: "Lab 11"
+    title: "Lab: Project peer review"
+    project: "#peer-review"
     
   - date: "UNIT 03"
     title: "LOOKING AHEAD"
@@ -152,6 +158,8 @@ lessons:
   - date: "Thu, Nov 05"
     title: "Lab 12"
     quiz: "quiz-04.html"
+  - title: "Peer review due"
+    project: "#peer-review"
     
   - week: "Week 13"
     date: "Mon, Nov 09"
@@ -159,11 +167,19 @@ lessons:
   - date: "Wed, Nov 11"
     title: "Modeling in practice"
   - date: "Thu, Nov 12"
-    title: "Lab 13"
+    title: "Project work day"
 
   - week: "Week 14"
     date: "Mon, Nov 16"
-    title: "Projects"
+    title: "Project work day"
+  - date: "Tue, Nov 17"
+    title: "Final report due"
+    project: "#written-report"
+  - date: "Fri, Nov 20"
+    title: "Video + slides + repo due"
+    project: "#presentation-slides"
     
   - week: "Week 15"
-    title: "Project presentations"
+    date: "Sun, Nov 22"
+    title: "Presentation comments due"
+    project: "#video-presentation"
