--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -95,7 +95,8 @@ lessons:
     slides: "13-model-selection.html"
   - date: "Wed, Sep 30"
     title: "MLR: Conditions"
-  - title: "MLR: Model diagnostics"  
+  - title: "MLR: Model diagnostics"
+    slides: "14-model-diagnostics.html"
   - date: "Thu, Oct 01"
     title: "No lab: Take Quiz 02"
     quiz: "quiz-02.html"
