--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -95,6 +95,7 @@ lessons:
     slides: "13-model-selection.html"
   - date: "Wed, Sep 30"
     title: "MLR: Conditions"
+    slides: "14-mlr-conditions.html"
   - title: "MLR: Model diagnostics"
     slides: "14-model-diagnostics.html"
   - date: "Thu, Oct 01"
