add lec 16 slides

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -113,7 +113,8 @@ lessons:
     title: "Logistic: Odds + probabilities"
     slides: "15-logistic-odds.html"
   - date: "Wed, Oct 07"
-    title: "Logistic: Coefficients"
+    title: "Logistic: Odds ratios"
+    slides: "16-logistic-odds-ratios.html"
   - date: "Thu, Oct 08"
     title: "Lab 08"
   - date: "Fri, Oct 09"
