add lec 16 video

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -116,7 +116,7 @@ lessons:
     title: "Logistic: Odds ratios"
     slides: "16-logistic-odds-ratios.html"
   - date: "Thu, Oct 08"
-    title: "Lab 08"
+    title: "Lab: Project proposal work day"
   - date: "Fri, Oct 09"
     title: "Projet proposal due"
     project: "#project-proposal"
@@ -128,7 +128,7 @@ lessons:
     title: "Logistic regression"
     hw: "hw-05.html"
   - date: "Thu, Oct 15"
-    title: "Lab 09"
+    title: "Lab 06"
 
   - week: "Week 10"
     date: "Mon, Oct 19"
@@ -136,7 +136,7 @@ lessons:
   - date: "Wed, Oct 21"
     title: "Logistic regression"
   - date: "Thu, Oct 22"
-    title: "Lab 10"
+    title: "Lab 07"
     quiz: "quiz-03.html"
   
   - week: "Week 11"
@@ -159,7 +159,7 @@ lessons:
   - date: "Wed, Nov 04"
     title: "Statistics experience"
   - date: "Thu, Nov 05"
-    title: "Lab 12"
+    title: "Lab 08"
     quiz: "quiz-04.html"
   - title: "Peer review due"
     project: "#peer-review"
@@ -170,11 +170,11 @@ lessons:
   - date: "Wed, Nov 11"
     title: "Modeling in practice"
   - date: "Thu, Nov 12"
-    title: "Project work day"
+    title: "Lab: Project work day"
 
   - week: "Week 14"
     date: "Mon, Nov 16"
-    title: "Project work day"
+    title: "Project meetings"
   - date: "Tue, Nov 17"
     title: "Final report due"
     project: "#written-report"
