add lec 18 notes

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -126,7 +126,8 @@ lessons:
     date: "Mon, Oct 12"
     title: "Statistics experience"
   - date: "Wed, Oct 14"
-    title: "Logistic regression"
+    title: "Logistic regression: Inference"
+    slides: "18-logistic-inference.html"
     hw: "hw-05.html"
   - date: "Thu, Oct 15"
     title: "Lab 06"
