--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -128,7 +128,8 @@ lessons:
   - date: "Wed, Oct 14"
     title: "Logistic regression: Inference"
     slides: "18-logistic-inference.html"
-    hw: "hw-05.html"
+  - title: "HW 05 assigned"
+  - hw: "hw-05.html"
   - date: "Thu, Oct 15"
     title: "Lab 06"
 
