add lec 20 slides

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -140,6 +140,7 @@ lessons:
     slides: "19-logistic-prediction.html"
   - date: "Wed, Oct 21"
     title: "Logistic regression: Conditions"
+    slides: "20-logistic-conditions.html"
   - date: "Thu, Oct 22"
     title: "No lab: Take Quiz 03"
   - title: "Quiz 03 assigned"
@@ -169,10 +170,14 @@ lessons:
   - date: "Wed, Nov 04"
     title: "Statistics experience"
   - date: "Thu, Nov 05"
-    title: "Lab 08"
+    title: "No Lab: Take Quiz 04"
+  - title: "Quiz 04 assigned"
     quiz: "quiz-04.html"
   - title: "Peer review due"
     project: "#peer-review"
+  - date: "Fri, Nov 06"
+    title: "Quiz 04 due"
+    quiz: "quiz-04.html"
     
   - week: "Week 13"
     date: "Mon, Nov 09"
