--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -153,6 +153,7 @@ lessons:
   - week: "Week 11"
     date: "Mon, Oct 26"
     title: "Multinomial logistic regression"
+    slides: "21-multinom-logistic.html"
   - date: "Wed, Oct 28"
     title: "Multinomial logistic regression"
   - title: "Draft report due"
