add lec 22 notes

--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -155,7 +155,8 @@ lessons:
     title: "Multinomial logistic regression"
     slides: "21-multinom-logistic.html"
   - date: "Wed, Oct 28"
-    title: "Multinomial logistic regression"
+    title: "Multinomial logistic regression, Pt2"
+    slides: "22-multinom-logistic-pt2.html"
   - title: "Draft report due"
     project: "#written-report"
   - date: "Thu, Oct 29"
