--- a/data/schedule.yaml
+++ b/data/schedule.yaml
@@ -187,7 +187,7 @@ lessons:
     title: "Dealing with missing data"
     slides: "25-missing-data.html"
   - date: "Wed, Nov 11"
-    title: "Modeling in practice"
+    title: "Communicating results"
   - date: "Thu, Nov 12"
     title: "Lab: Project work day"
 
